[package]
name = "api-diff-comment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = { version = "0.1.12", default-features = false }
handlebars = { version = "5.1.2", default-features = false }
miette = { version = "7.2.0", features = ["fancy"] }
public-api = "0.33.1"
rustdoc-json = "0.9.0"
serde = { version = "1.0.199", default-features = false, features = ["derive"] }
tempfile = "3.10.1"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = "0.3.18"
